# Obsidian-to-keep

./: .coverage  README.md  config.yaml  main.py  pyproject.toml
adapters/: keep.py  obsidian.py
converters/: keep_to_md.py  md_to_keep.py
dashboard/: app.py
dashboard/templates/: index.html
obsidian_keep_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sync/: conflict.py  engine.py  state.py
tests/: test_converters.py  test_engine.py
